blog.css
:root {
  --text:#2a2a2a;
  --text-med:#bbb;
  --text-faint:#ffdc68;
  --text-faint-alpha:#ffdc68a8;
  --text-ultra-faint:#d7d7d7;
  --highlight:#fffdcc;
  --header-bg:#fffde9;
  --bg:#fff;
  --bg-faint:#f3f3f3;
  --selection:#f7cb4577;

  --gold:#ffd024;

  --outgoing-msg:#3986f7;
  --outgoing-text:#ffffff;
  --incoming-msg:#e9e9eb;
  --incoming-text:#242424;
  --gradient-shadow:#d6d6d6;
}
::-moz-selection {background-color:var(--selection);}
::selection {background-color:var(--selection);}
html {width:100vw;overflow-x:hidden;}
body {background-color:var(--bg);color:var(--text);font-family:'Raleway', sans-serif;font-variant-ligatures:common-ligatures;font-weight:300;font-size:18px;line-height:2rem;margin:0 auto;max-width:100vw;text-rendering:optimizeLegibility;overflow-x:auto;padding:0;}
nav, footer {padding:15px 0;}
nav a img {display:inline-block;max-width:34px;margin-right:6px;vertical-align:bottom;}

.row {position:relative;}
h1, h2, h3, h5 {font-variant-ligatures:discretionary-ligatures;font-weight:normal;line-height:1.1em;margin-top:0;}
h1 {color:var(--gold);text-shadow:1px 1px 5px var(--bg-faint), 1px 0 5px var(--bg-faint), 0px 1px 5px var(--bg-faint)}
h2 {font-size:1.3em;}
h3 {font-size:1.3em;}
h5 {font-size:1.2em;font-weight:600;}

a {color:var(--text);text-decoration:none;}
a:hover {color:var(--gold);text-decoration:none;}
a.btn {border:none;border-radius:6px;font-weight:bold;display:inline-block;margin-top:10px;padding:8px 14px;}
b {font-weight:700;}
b.big {font-size:1.6em;font-weight:600;color:var(--text-med);}

emoji {font-family:'apple color emoji','segoe ui emoji','noto color emoji','android emoji',emojisymbols,'emojione mozilla','twemoji mozilla','segoe ui symbol';font-weight:400;}
img {max-width:100%;}
hr {border-color:var(--text-ultra-faint);clear:right;margin:50px auto;width:40%;}

/* BLOG CONTENT */
article {padding:30px 15px 50px;position:relative;}
figure {position:relative;text-align:center;}
figure.half-width img {display:block;margin:10px auto;max-width:100%;}
.full-width figcaption {color:var(--incoming-text);font-size:1.25em;margin-top:0;}
.dropcap {font-size:73px;float:left;line-height:3.8rem;font-weight:bold;padding-right:0.6rem;}

@media (min-width:820px) {
  h1 {font-size:62px;}
  article {max-width:768px;margin:0 auto;}
  figure.half-width img {margin:0 auto;}
}

/* OVERFLOW CONTAINER */
.overflow {text-align:center;}
@media (min-width:820px) {
  .overflow {cursor:ew-resize;width:100vw;margin-left:calc(-50vw + 369px);overflow-x:auto;position:relative;}
  .overflow:hover::after {opacity:0;letter-spacing:18vw;}
  .overflow::after {content:'SCROLL';color:var(--text-faint);display:block;font-size:280px;font-weight:bold;letter-spacing:6vw;line-height:1.55em;max-width:1600px;opacity:.4;overflow:hidden;text-align:left;position:absolute;top:0;left:0;width:1600px;z-index:-1;transition:all .4s ease-in;}
  .overflow .row {width:1600px;margin:0 auto;}
  .overflow .col-lg-6 {-ms-flex: 0 0 50%;flex: 0 0 50%;max-width: 50%;}
}
@media (min-width:1600px) {
  .overflow {cursor:default;}
  .overflow::after {content:unset;}
}

/* SMS */
blockquote p:first-child {margin-bottom:5px;}
blockquote p:first-child::before, blockquote p:first-child::after {content:unset;}
figure.sms {cursor:pointer;user-select:none;text-align:left;}
.sms p {background-color:var(--incoming-msg);border-radius:20px;color:var(--incoming-text);line-height:1.2em;margin:.4rem 0;padding:10px 14px;width:fit-content;position:relative;}
figure.sms p {box-shadow:0 0px 25px #2a2a2a61;clear:right;font-size:16px;max-width:80%;transition:top .6s ease-out;top:0px;}
figure.sms p::after {background-image:radial-gradient(ellipse at bottom left, var(--bg), var(--gradient-shadow));}
.sms p::before, .sms p::after {background-color:var(--incoming-msg);border-bottom-right-radius:100%;content:'';display:block;width:16px;height:12px;position:absolute;top:100%;left:8px;}
.sms p::after {background-color:var(--bg);width:4px;}
.sms p.outgoing {background-color:var(--outgoing-msg);color:var(--outgoing-text);float:right;}
.sms p.outgoing::before, .sms p.outgoing::after {background-color:var(--outgoing-msg);left:unset;right:8px;transform:scaleX(-1);}
.sms p.outgoing::after {width:4px;right:7px;background-color:var(--bg);}
figcaption {max-width:500px;margin:10px auto 25px;}
figcaption::after {content:'';display:block;clear:both;}

@media (min-width:820px) {
  figure {margin:3rem 0 2rem;}
  figure img {pointer-events:none;}
  .sms figcaption {position:absolute;top:50%;left:30px;right:30px;}
  figure.sms p {transform:scale(1.2);margin-top:1em;max-width:400px;}

  @media (hover: hover) {
    figure.sms::after {color:var(--text-med);content:'(click to show image)';display:block;text-align:center;margin-top:.4em;}
    figure:active.sms p {opacity:0;top:-15px;transition:top .15s ease-out, opacity .12s ease-in;transition-delay:0s, .05s;}
    figure:active.sms p:nth-child(2) {transition-delay:.08s, .13s;}
    figure:active.sms p:nth-child(3) {transition-delay:.16s, .21s;}
  }

  figcaption {max-width:unset;}
  figure.half-width {float:right;margin:0 -20px 12px 25px;max-width:280px;}
  figure.full-width {margin:1em 0 2em;}
  .full-width figcaption {font-size:1.2em;margin-top:0;max-width:600px;}
}

/* FOOTER */
footer .icons * {display:inline-block;margin:0 2px;vertical-align:middle;}
@media (prefers-color-scheme:dark){#footer a.icon {color:#777;}}
.fa-linkedin:hover {color:#3177B0;}
.fa-mailbox:hover {color:#db0029;}
.fa-sms:hover {color:#54B852;}

/* DARK MODE */
@media (prefers-color-scheme:dark) {
:root {
  --text:#fff;
  --text-med:#bbb;
  --text-faint:#8f8e83;
  --text-faint-alpha:#8f8e838f;
  --text-ultra-faint:#444;
  --highlight:#5e5a00;
  --header-bg:#1d1d1d;
  --bg:#000;
  --bg-faint:#181818;
  --selection:#fffcdb42;

  --gold:#ffd700;

  --outgoing-msg:#3986f7;
  --outgoing-text:#ffffff;
  --incoming-msg:#3b3b3d;
  --incoming-text:#e1e1e1;
  --gradient-shadow:#090909;
}
  b {font-size:1.15em;line-height:1em;}
  img.invert {filter:invert(1) hue-rotate(180deg);}
  .work a {box-shadow:none;}
}

